--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -123,6 +123,7 @@ add_compile_definitions(PROJECT_VERSION=${CMAKE_PROJECT_VERSION})
 
 add_compile_definitions(WITH_ISAL)  # For `rapidgzip`.
 add_compile_definitions(WITH_RPMALLOC)  # For `rapidzip`.
+add_compile_definitions(USE_RAPIDGZIP)
 add_compile_definitions(USE_IGZIP)  # TODO: temporary for `rabbitfx`.
 
 if(INSTANCE_COUNT)
