--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -13,7 +13,7 @@ set(PROJECT_SRC
         # kmc_api/kmer_api.cpp
         # kmc_api/mmer.cpp
         # kmc_api/Virtual_Prefix_File.cpp
-        xxHash/xxhash.c
+        # xxHash/xxhash.c
         Build_Params.cpp
         Application.cpp
         Seq_Input.cpp
